@@ -47,17 +47,21 @@ Item {
                             displaytext.text = "一键清理";
                         }
                      }
-                    else if (msg == "u") {
+//                    else if (msg == "u") {
+//                         btn.enabled=true;
+//                    }
+//                    else if (msg == "c") {
+//                         btn.enabled=true;
+//                    }
+//                    else if (msg == "h") {
+//                        btn.enabled=true;
+//                    }
+//                    else if (msg == "k") {
+//                        btn.enabled=true;
+//                    }
+                    else if (msg == "u" || msg == "c" || msg == "h" || msg == "k") {
                          btn.enabled=true;
-                    }
-                    else if (msg == "c") {
-                         btn.enabled=true;
-                    }
-                    else if (msg == "h") {
-                        btn.enabled=true;
-                    }
-                    else if (msg == "k") {
-                        btn.enabled=true;
+                         displaytext.text = "正在清理..."
                     }
                     else if (msg == "o") {
                         btn.enabled=true;
@@ -77,17 +81,21 @@ Item {
                     btnImg.source = "../../img/icons/green1.png"
                     displaytext.text = "一键清理";
                  }
-                 else if (msg == "u") {
+//                 else if (msg == "u") {
+//                     btn.enabled=true;
+//                 }
+//                 else if (msg == "c") {
+//                     btn.enabled=true;
+//                 }
+//                else if (msg == "h") {
+//                    btn.enabled=true;
+//                }
+//                else if (msg == "k") {
+//                    btn.enabled=true;
+//                }
+                else if (msg == "u" || msg == "c" || msg == "h" || msg == "k") {
                      btn.enabled=true;
-                 }
-                 else if (msg == "c") {
-                     btn.enabled=true;
-                 }
-                else if (msg == "h") {
-                    btn.enabled=true;
-                }
-                else if (msg == "k") {
-                    btn.enabled=true;
+                     displaytext.text = "正在清理..."
                 }
                 else if (msg == "o") {
                     btn.enabled=true;
